# monkeypox

scripts/: README.md
scripts/agency_ingestion/: pyproject.toml  run.py  run.py.bak
scripts/social_media/: docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.py  run.sh  test_run.py
scripts/who_ingestion/: pyproject.toml  run.py
